@@ -1,3 +1,8 @@
+2008-09-17 17:52-EDT Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* Source/NSWorkspace.m: Exclude list of reserved mount names from
+	the results returned by -mountedLocalVolumePaths.
+
 2008-09-14 13:18-EDT Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* install.sh: Adding install script for use by compile-all.
